--- a/pom.xml
+++ b/pom.xml
@@ -181,5 +181,37 @@
 
   <build>
     <finalName>permission</finalName>
+
+    <!-- 构建过程中用到的插件 -->
+    <plugins>
+      <!-- 具体插件，逆向工程的操作是以构建过程中插件形式出现的 -->
+      <plugin>
+        <groupId>org.mybatis.generator</groupId>
+        <artifactId>mybatis-generator-maven-plugin</artifactId>
+        <version>1.3.0</version>
+
+        <!-- 插件的依赖 -->
+        <dependencies>
+          <!-- 逆向工程的核心依赖 -->
+          <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.2</version>
+          </dependency>
+          <!-- 数据库连接池 -->
+          <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.2</version>
+          </dependency>
+          <!-- MySQL 驱动 -->
+          <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
   </build>
 </project>
